# Qt-OpenCASCADE-Projects

./: .gitignore  README.md  d
000-viewerWithOptions/src/: Viewer.cpp  Viewer.h  WidgetClipPlanes.h
000-viwerWithOptions/src/: Viewer.cpp
001-A-basicViewer/src/: MainWindow.cpp  Viewer.cpp  Viewer.h
001-B-basicViewerWithMouseCoordinate/: CMakeLists.txt
001-C-basicViewerWithOptions/: CMakeLists.txt
001-C-basicViewerWithOptions/src/: MainWindow.cpp  MainWindow.h  STEPProcessor.cpp  STEPProcessor.h  Viewer.cpp  Viewer.h  ViewerCameraController.cpp  WidgetClipPlanes.cpp
001-C-basicViewerWithOptions/uis/: mainwindow.ui
001-basicViewer/: CMakeLists.txt
001-basicViewer/src/: MainWindow.cpp  MainWindow.h  Viewer.cpp  Viewer.h  main.cpp  plot.h
001-exampleGeant4PureQt/: CMakeLists.txt
001-exampleGeant4PureQt/src/: GDMLProcessor.cpp  GDMLProcessor.h  MainWindow.cpp  STEPProcessor.h
001-exampleGeant4QtGDMLViewer/: CMakeLists.txt
001-installerFrameWork/Installer-Framework/: deployer.sh  installer-project.pro  text.txt
001-stepModelTree/docs/: Doxyfile
001-stepModelTree/src/: MainWindow.cpp  STEPProcessor.cpp  Viewer.cpp
001-stepModelTreeWidthGDMLViewer/: CMakeLists.txt
001-stepModelTreeWidthGDMLViewer/src/: Viewer.cpp  Viewer.h  ViewerCameraController.cpp
001-stepModelTreeWidthGDMLViewer/uis/: mainwindow.ui
002-basicViewerWithMouseCoordinate/src/: MainWindow.cpp  MainWindow.h  Viewer.cpp  Viewer.h
002-basicViewerWithViewMode/: CMakeLists.txt
002-basicViewerWithViewMode/src/: MainWindow.h  Viewer.cpp  Viewer.h
003-basicViewerRightClickMenu/src/: MainWindow.cpp  MainWindow.h  Viewer.cpp  Viewer.h
004-basicViewerWithClipPlanes/src/: MainWindow.cpp  MainWindow.h  Viewer.cpp  Viewer.h
005-redirectQDEBUG/src/: MainWindow.cpp  MainWindow.h  Viewer.cpp
005-viewerWithOptions/: CMakeLists.txt
006-includeQICONS/: CMakeLists.txt
006-includeQICONS/src/: MainWindow.cpp  MainWindow.h  STEPProcessor.cpp  STEPProcessor.h  Viewer.cpp
007-includeSTEPFiles/: CMakeLists.txt
007-includeSTEPFiles/src/: MainWindow.cpp  MainWindow.h  STEPProcessor.h  (+3 more)
007-viewerWithOptions-stepReader-and-stepWriter/: CMakeLists.txt
011-mouseInteractions/: CMakeLists.txt
015-createNewShape/: CMakeLists.txt
017-mergeShapes3D/: CMakeLists.txt
021-TabToolbar/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
021-TabToolbar/src/: STEPProcessor.cpp  STEPProcessor.h  Viewer.cpp
021-ribbonTabToolbar/: CMakeLists.txt
024-translation/: CMakeLists.txt
026-LineCharts/: CMakeLists.txt
030-3DSurface/: CMakeLists.txt
033-QTest/: CMakeLists.txt
034-OCCTv691/: CMakeLists.txt
034-OCCTv691/cmake-modules/: FindOCC.cmake
034-OCCTv691/src/: MainWindow.h  STEPProcessor.cpp  Viewer.h
034-UIFiles/: CMakeLists.txt
035-2DGraph/: CMakeLists.txt
036-QSqLite/: CMakeLists.txt
037-customProjectFile/: CMakeLists.txt
038-WebEngine/: CMakeLists.txt
038-basicQMLApplicationWithCMake/: CMakeLists.txt
038-basicQMLApplicationWithCMake/qml/: main.qml
038-basicQMLApplicationWithCMake/src/: main.cpp
038-qmlOpenCascade/: CMakeLists.txt
038-qmlOpenCascade/qml/: main.qml
038-qmlOpenCascade/src/: main.cpp  opencascade.cpp  opencascade.h
039-Qwt/: CMakeLists.txt
039-Qwt-RightClick/: CMakeLists.txt
039-Qwt-basicCharts/: 3d_data.txt
039-Qwt-heatmap/: CMakeLists.txt
039-Qwt-spectogram/: 3d_data.txt  CMakeLists.txt
039-Qwt-spectogram/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  QwtSpectrogramPlot.cpp  QwtSpectrogramPlot.h
039-Qwt/src/: ErrorBarPlotCurve.h  MainWindow.cpp  MainWindow.h
039-texturedShape/: CMakeLists.txt
040-QwtPlot-ForFitAll/: CMakeLists.txt  Makefile
040-QwtPlot-ForFitAll/src/: plot.cpp
040-gdmlReaderSimple-noGUI/: CMakeLists.txt
042-Dark-LightMode/: CMakeLists.txt
051-QProcess/: CMakeLists.txt
055-projectManager/: CMakeLists.txt  project.xml
060-XMLSchemaValidation/: CMakeLists.txt
070-QtLocalServer-Socket-Example/QtLocalServer/: CMakeLists.txt  main.cpp  mylocalserver.cpp  mylocalserver.h
071-QtLocalServer-Socket-Example/QtLocalServer/: CMakeLists.txt
071-QtLocalServer-Socket-Example/QtLocalServer/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mylocalserver.cpp  mylocalserver.h
071-QtLocalServer-Socket-Example/QtLocalSocket/: CMakeLists.txt
071-QtLocalServer-Socket-Example/QtLocalSocket/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mylocalsocket.h
080-AddShapes/: CMakeLists.txt
080-ManipulatingShapes/: CMakeLists.txt
080-ManipulatingShapes/resources/: icons.qrc
080-ManipulatingShapes/resources/files/: database.db
080-ManipulatingShapes/resources/themes/dark/: main.scss
080-ManipulatingShapes/resources/themes/light/: main.scss
080-ManipulatingShapes/src/: CutHoleDialog.cpp  CutHoleDialog.h  CutHoleDialog.ui  MRADSIMHelperFunctions.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  NodeInteractive.h  STEPProcessor.cpp  STEPProcessor.h  Viewer.cpp  Viewer.h  ViewerBox.cpp  ViewerBox.h  ViewerBox.ui  ViewerCameraController.h
0xx-stepModelTree/: CMakeLists.txt
EDIT-gdmlViewerWithSTEPViewerStartEmptyViewersTab/: CMakeLists.txt
EDIT-geant4-Qt/: CMakeLists.txt
EDIT-geant4-Qt-QProgressBar/: CMakeLists.txt
EDIT-geant4-Qt-command/: CMakeLists.txt
Example - GDML Files/: .cube.gdml.kate-swp  asm.gdml  button (copy).gdml  button.gdml  denemeddsf.gdml  geo.gdml  iciDoluKure.gdml  lcp-samtec.gdml  xdf.gdml
Example - STEP Files/: Aluminium_Cover.stp  Asm.stp  LCP_Samtec_1.stp  button.step  cyl02.step  iciDoluKure.stp
MRADSIM-Deployer/: CMakeLists.txt  main.cpp
MRADSIM-Deployer/resources/: resources.qrc
MRADSIM-Deployer/src/: MainWindow.cpp  MainWindow.h
MRADSIM-Deployer/uis/: MainWindow.ui
ProjectTemplate/: CMakeLists.txt  DataStructs.h  MRADSIMHelperFunctions.cpp  MRADSIMHelperFunctions.h  MainWindow..ui  MainWindow.cpp  MainWindow.h  NodeInteractive.h  STEPProcessor.cpp  STEPProcessor.h  Viewer.cpp  Viewer.h  ViewerCameraController.cpp  ViewerCameraController.h  main.cpp
TEST-ribbon/: CMakeLists.txt
gview-master/: view.cc
src/: STEPProcessor.cpp  STEPProcessor.h
(+463 files in other folders)
